"Visit event page" on iPhone is buggy #32

--- a/app/globals.css
+++ b/app/globals.css
@@ -55,3 +55,16 @@ html {
     border-radius: 70%;
     height: 8px;
 }
+
+@layer utilities {
+  /* Hide scrollbar for Chrome, Safari and Opera */
+  .no-scrollbar::-webkit-scrollbar {
+    display: none;
+  }
+
+  /* Hide scrollbar for IE, Edge and Firefox */
+  .no-scrollbar {
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
+  }
+}
